дизайн начальной страницы

--- a/main.html
+++ b/main.html
@@ -33,18 +33,21 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#">Услуги</a>
 					</li>
-					<!-- Добавьте другие ссылки на страницы по мере необходимости -->
 				</ul>
 			</div>
 		</div>
 	</nav>
 	
 
-    <!-- Описание сайта -->
     <section class="description">
         <div class="container">
-            <h1>Добро пожаловать на наш сайт!</h1>
-            <p>Здесь вы можете найти много интересной информации...</p>
+            <h1>Онлайн реестр культурного наследия России</h1>
+			<p>
+				Добро пожаловать на карту культурного богатства России! Наш сайт представляет удобный онлайн-ресурс, включающий интерактивную карту с объектами культурного наследия и справочник, полный увлекательной информации.<br>
+				Откройте для себя многочисленные памятники истории и культуры народов Российской Федерации, исследуйте их расположение и уникальные особенности прямо на нашей карте.<br>
+				Получите доступ к справочнику, содержащему подробные описания каждого объекта, чтобы углубиться в их историю и значение.<br>
+				Путешествуйте по культурному наследию России вместе с нашим сайтом "Карта Культурного Наследия России: Онлайн Реестр".
+			</p>
         </div>
     </section>
 
@@ -92,81 +95,17 @@
             </button>
         </div>
     </div>
-	 <!-- Remove the container if you want to extend the Footer to full width. -->
-	<div class="container my-5">
 
-		<footer class="text-center text-white" style="background-color: #f1f1f1;">
-			<!-- Grid container -->
-			<div class="container pt-4">
-			<!-- Section: Social media -->
-			<section class="mb-4">
-				<!-- Facebook -->
-				<a
-				class="btn btn-link btn-floating btn-lg text-dark m-1"
-				href="#!"
-				role="button"
-				data-mdb-ripple-color="dark"
-				><i class="fab fa-facebook-f"></i
-				></a>
-		
-				<!-- Twitter -->
-				<a
-				class="btn btn-link btn-floating btn-lg text-dark m-1"
-				href="#!"
-				role="button"
-				data-mdb-ripple-color="dark"
-				><i class="fab fa-twitter"></i
-				></a>
-		
-				<!-- Google -->
-				<a
-				class="btn btn-link btn-floating btn-lg text-dark m-1"
-				href="#!"
-				role="button"
-				data-mdb-ripple-color="dark"
-				><i class="fab fa-google"></i
-				></a>
-		
-				<!-- Instagram -->
-				<a
-				class="btn btn-link btn-floating btn-lg text-dark m-1"
-				href="#!"
-				role="button"
-				data-mdb-ripple-color="dark"
-				><i class="fab fa-instagram"></i
-				></a>
-		
-				<!-- Linkedin -->
-				<a
-				class="btn btn-link btn-floating btn-lg text-dark m-1"
-				href="#!"
-				role="button"
-				data-mdb-ripple-color="dark"
-				><i class="fab fa-linkedin"></i
-				></a>
-				<!-- Github -->
-				<a
-				class="btn btn-link btn-floating btn-lg text-dark m-1"
-				href="#!"
-				role="button"
-				data-mdb-ripple-color="dark"
-				><i class="fab fa-github"></i
-				></a>
-			</section>
-			<!-- Section: Social media -->
+	<div class="custom-footer text-white text-center text-lg-start">
+		<footer class="bg-body-tertiary text-center">
+			
+			<div class="text-center p-2">
+				© 2020 Copyright:
+				<a class="text-body" href="https://mdbootstrap.com/">MDBootstrap.com</a>
 			</div>
-			<!-- Grid container -->
-		
-			<!-- Copyright -->
-			<div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-			© 2020 Copyright:
-			<a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-			</div>
-			<!-- Copyright -->
 		</footer>
-		
 	</div>
-	<!-- End of .container -->
+	
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
